Base streamlit chat setup

--- a/raglc.ipynb
+++ b/raglc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a2ad481d",
    "metadata": {},
    "outputs": [
@@ -35,8 +35,7 @@
     "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
     "\n",
     "dotenv.load_dotenv()\n",
-    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "print(\"OPENAI_API_KEY:\", OPENAI_API_KEY)"
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
@@ -194,19 +193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "cdf4b1a1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'content'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 35\u001b[39m\n\u001b[32m     33\u001b[39m \u001b[38;5;66;03m#response streaming\u001b[39;00m\n\u001b[32m     34\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m chunk \u001b[38;5;129;01min\u001b[39;00m conversation_rag_chain.pick(\u001b[33m\"\u001b[39m\u001b[33manswer\u001b[39m\u001b[33m\"\u001b[39m).stream({\u001b[33m\"\u001b[39m\u001b[33mmessages\u001b[39m\u001b[33m\"\u001b[39m: messages[:-\u001b[32m1\u001b[39m], \u001b[33m\"\u001b[39m\u001b[33minput\u001b[39m\u001b[33m\"\u001b[39m: messages[-\u001b[32m1\u001b[39m].content}):\n\u001b[32m---> \u001b[39m\u001b[32m35\u001b[39m     respone_message += \u001b[43mchunk\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcontent\u001b[49m\n\u001b[32m     36\u001b[39m     \u001b[38;5;28mprint\u001b[39m(chunk, end=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m, flush=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     38\u001b[39m \u001b[38;5;66;03m# Append the response message to the conversation history\u001b[39;00m\n",
-      "\u001b[31mAttributeError\u001b[39m: 'str' object has no attribute 'content'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evgeny highlights quite a few standout strengths in his letter, but the ones he emphasizes most are:\n",
+      "\n",
+      "• Exceptional resilience – you’re “fireproof” against burnout and even spread that energy to the rest of the team.  \n",
+      "• Relentless delivery mindset – you dive in head-on, juggle priorities without missing a detail, love to get hands-on when needed, and invariably drive projects to a happy ending.  \n",
+      "• Deep product and domain knowledge – you make balanced, well-informed decisions.  \n",
+      "• Top-tier facilitation and leadership – you lead with ease and elegance, manage everyone’s expectations by linking business needs to what the team can deliver, and still leave room for creativity.  \n",
+      "• Demigod-level soft skills – you build rapport instantly, motivate people (even if it means a friendly, metaphorical kick in the ass), always with a smile and total professionalism."
      ]
     }
    ],
@@ -234,7 +235,7 @@
     "messages = [\n",
     "    {\"role\" : \"user\", \"content\": \"Hi! How are you doing today?\"},\n",
     "    {\"role\" : \"assisant\", \"content\": \"Hi there! I'fine, thanks for asking. How can I help you?\"},\n",
-    "    {\"role\" : \"user\", \"content\": \"What is my favorite food?\"},\n",
+    "    {\"role\" : \"user\", \"content\": \"What are the strongset skills Eugeny mentioned about me?\"},\n",
     "]\n",
     "\n",
     "# transform message history to LangChain format, woht HUma MAessages and AI Messages\n",
